--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div id="login-btn" class="login-btn">LOGIN</div>
     </div>
 
-    <h2 class="log">You´re logged</h2>
+    <h2 class="log" id="log">You´re logged!</h2>
+    <h2 class="error" id="error">User or password incorrect</h2>
         
     <script type="module" src="js/client.js"></script>
 </body>
